# uise-desktop

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE-LGPLv3.md  LICENSE.md  README.md
demo/: CMakeLists.txt
demo/alignedstretchingwidget/: CMakeLists.txt  alignedstretchingwidgetdemo.hpp  main.cpp
demo/audiodevicesetting/: CMakeLists.txt  main.cpp
demo/avatar/: CMakeLists.txt  avatardemo.qrc  main.cpp
demo/busywaiting/: CMakeLists.txt  main.cpp
demo/circlebusy/: CMakeLists.txt  main.cpp
demo/drawer/: CMakeLists.txt  main.cpp
demo/editablelabel/: CMakeLists.txt  main.cpp
demo/editablepanel/: CMakeLists.txt  demopanel.hpp  main.cpp
demo/elidedcontainer/: CMakeLists.txt  main.cpp
demo/flyweightlistview/: CMakeLists.txt  helloworlditem.hpp  main.cpp
demo/framewithstatus/: CMakeLists.txt  main.cpp
demo/htree/: CMakeLists.txt  dirlist.cpp  dirlist.hpp  main.cpp
demo/icontextbutton/: CMakeLists.txt  main.cpp
demo/imageeditor/: CMakeLists.txt  main.cpp
demo/imageviewer/: CMakeLists.txt  main.cpp
demo/loadcontrol/: CMakeLists.txt  main.cpp
demo/loadingframe/: CMakeLists.txt  main.cpp
demo/modalpopup/: CMakeLists.txt  main.cpp
demo/newpasswordwizard/: CMakeLists.txt  main.cpp
demo/passworddialog/: CMakeLists.txt  main.cpp
demo/passwordinput/: CMakeLists.txt  main.cpp
demo/qrcodescanner/: CMakeLists.txt  main.cpp
demo/qrcodescanner/macos/: Info.plist.in
demo/skeleton/: CMakeLists.txt  main.cpp
demo/spinner/: CMakeLists.txt  main.cpp
demo/stackwithnavigationbar/: CMakeLists.txt  main.cpp
demo/typingindicator/: CMakeLists.txt  main.cpp
include/uise/: version.hpp
include/uise/desktop/: abstractchatmessage.hpp  abstractchatmessagecall.hpp  abstractdialog.hpp  abstractimageeditor.hpp  abstractimageviewer.hpp  abstractloadingwidget.hpp  abstractmessageeditor.hpp  alignedstretchingwidget.hpp  audiodevicesetting.hpp  avatar.hpp  avatarbutton.hpp  busywaiting.hpp  busywaitingframe.hpp  buttonslist.hpp  chatmessage.hpp  chatmessagecall.hpp  chatmessagesview.hpp  chatmessagetext.hpp  circlebusy.hpp  circlebusyframe.hpp  defaultwidgetfactory.hpp  dialog.hpp  directoryimagesviewer.hpp  drawer.hpp  editablelabel.hpp  editablelabelfactory.hpp  editablepanel.hpp  editablepanelgrid.hpp  editablepanels.hpp  elidedcontainer.hpp  elidedlabel.hpp  flyweightlistframe.hpp  flyweightlistitem.hpp  flyweightlistview.hpp  flyweightlistview.ipp  frame.hpp  framewithmodalstatus.hpp  framewithrefresh.hpp  freehanddrawview.hpp  horizontaltree.hpp  (+75 more)
include/uise/desktop/detail/: flyweightlistview_p.hpp  htreesplitter_p.hpp  (+2 more)
resources/: uise.qrc
resources/qss/: htree.qss  navigationbar.qss  spinner.qss
resources/qss/dark/: htree.qss  navigationbar.qss  spinner.qss
resources/qss/light/: navigationbar.qss
resources/style/: abstractdialog.qss  audiodevicesetting.json  audiodevicesetting.qss  avatar.json  busywaiting.qss  buttonslist.qss  chat.json  chat.qss  editablelabel.json  editablelabel.qss  editablepanel.qss  flyweightlistview.json  flyweightlistview.qss  framewithmodalstatus.qss  global.qss  htree.json  htree.qss  imageeditor.json  imageeditor.qss  inputwidgets.qss  lineedit.json  lineedit.qss  loadcontrol.json  loadcontrol.qss  navigationbar.qss  passworddialog.json  passworddialog.qss  passwordinput.json  qrcodescanner.qss  skeleton.qss  statusdialog.json  statusdialog.qss  toast.qss  typingindicator.qss  wizarddialog.qss
resources/style/dark/: abstractdialog.qss  audiodevicesetting.json  audiodevicesetting.qss  avatar.json  chat.json  chat.qss  editablelabel.json  editablepanel.qss  flyweightlistview.json  flyweightlistview.qss  framewithmodalstatus.qss  global.qss  htree.json  htree.qss  imageeditor.json  imageeditor.qss  inputwidgets.qss  lineedit.json  loadcontrol.json  loadcontrol.qss  modalpopup.qss  navigationbar.qss  passworddialog.json  passworddialog.qss  passwordinput.json  qrcodescanner.qss  reset.qss  skeleton.qss  spinner.qss  statusdialog.json  statusdialog.qss  toast.qss  typingindicator.qss
resources/style/light/: abstractdialog.qss  audiodevicesetting.json  audiodevicesetting.qss  avatar.json  chat.json  chat.qss  editablelabel.json  editablepanel.qss  flyweightlistview.json  flyweightlistview.qss  framewithmodalstatus.qss  global.qss  htree.json  htree.qss  imageeditor.json  imageeditor.qss  inputwidgets.qss  lineedit.json  loadcontrol.json  loadcontrol.qss  modalpopup.qss  navigationbar.qss  passworddialog.json  passworddialog.qss  passwordinput.json  qrcodescanner.qss  reset.qss  skeleton.qss  statusdialog.json  statusdialog.qss  toast.qss  typingindicator.qss
src/: abstractchatmessagecall.cpp  abstractdialog.cpp  abstractimageeditor.cpp  abstractimageviewer.cpp  abstractloadingwidget.cpp  alignedstretchingwidget.cpp  audiodevicesetting.cpp  avatar.cpp  avatarbutton.cpp  busywaiting.cpp  busywaitingframe.cpp  buttonslist.cpp  chatmessage.cpp  chatmessagecall.cpp  chatmessagetext.cpp  circlebusy.cpp  circlebusyframe.cpp  defaultwidgetfactory.cpp  directchildwidget.cpp  directoryimagesviewer.cpp  drawer.cpp  editablelabel.cpp  editablelabelfactory.cpp  editablepanel.cpp  editablepanelgrid.cpp  editablepanels.cpp  elidedcontainer.cpp  elidedlabel.cpp  flyweightlistframe.cpp  flyweightlistview.cpp  framewithmodalstatus.cpp  framewithrefresh.cpp  freehanddrawview.cpp  horizontaltree.cpp  htree.cpp  htreebranch.cpp  htreeflyweightlistitem.cpp  htreelist.cpp  htreelistitem.cpp  htreenode.cpp  (+59 more)
test/: CMakeLists.txt
test/alignedstretchingwidget/: CMakeLists.txt  testalignedstretchingwidget.cpp
test/editablelabel/: CMakeLists.txt  testeditablelabel.cpp
test/flyweightlistview/: CMakeLists.txt  fwlvtestcontext.hpp  fwlvtestwidget.cpp  fwlvtestwidget.hpp  helloworlditem.hpp  testfixedlist.cpp  testfwlvinsertdelete.cpp  testfwlvjump.cpp  testfwlvloaditems.cpp  testfwlvresize.cpp  testfwlvscroll.cpp  testfwlvsettersgetters.cpp
test/inc/: main.cpp  test.inc.cmake  uise-testthread.cpp  uise-testwrapper.hpp
test/spinner/: CMakeLists.txt  testspinner.cpp
test/utils/: CMakeLists.txt  testmiscutils.cpp  testorientationinvariant.cpp
(+23 files in other folders)
