CMAKE_MINIMUM_REQUIRED (VERSION 3.16)

ADD_SUBDIRECTORY(alignedstretchingwidget)
ADD_SUBDIRECTORY(flyweightlistview)
ADD_SUBDIRECTORY(editablelabel)
ADD_SUBDIRECTORY(spinner)
ADD_SUBDIRECTORY(busywaiting)
ADD_SUBDIRECTORY(loadingframe)
ADD_SUBDIRECTORY(modalpopup)
ADD_SUBDIRECTORY(drawer)
ADD_SUBDIRECTORY(stackwithnavigationbar)
ADD_SUBDIRECTORY(htree)
ADD_SUBDIRECTORY(editablepanel)
ADD_SUBDIRECTORY(framewithstatus)
ADD_SUBDIRECTORY(passwordinput)
ADD_SUBDIRECTORY(passworddialog)
ADD_SUBDIRECTORY(newpasswordwizard)
ADD_SUBDIRECTORY(avatar)
ADD_SUBDIRECTORY(elidedcontainer)
ADD_SUBDIRECTORY(imageeditor)
