CMAKE_MINIMUM_REQUIRED (VERSION 3.16)
PROJECT(avatar-demo LANGUAGES CXX)

SET (HEADERS
)

SET (SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

QT6_ADD_RESOURCES(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/avatardemo.qrc)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME})

